# SPH-EXA

./: .gitignore  CMakeLists.txt  README.insitu
.github/workflows/: codeql.yml
.github/workflows/scripts/: build.sh
.gitlab/: common.yml  gitlab-ci.yml
ci/: .gitignore  common.yml  cscs.yml  gitlab-ci.yml  rfm.py
ci/SRC/: in
ci/cuda11/: Dockerfile_1  Dockerfile_2  build_base.yml  build_debug.yml  build_debug_sm60.yml  build_debug_sm80.yml  build_release_sm60.yml  build_release_sm80.yml  run_debug.yml  run_debug_sm60.yml  run_release_sm60.yml
ci/cuda12/: Dockerfile_1  Dockerfile_2  build_base.yml  build_debug_sm90.yml  build_release_sm90.yml  run_debug_sm90.yml  run_release_sm90.yml
ci/cuda12/SRC/: in
domain/include/cstone/cuda/: CMakeLists.txt
include/: profiling.hpp  propagator.hpp
jgphpc/SPH-EXA/: README.md
jgphpc/SPH-EXA/ghrs-data/: views_clones_aggregate.csv
jgphpc/SPH-EXA/ghrs-data/snapshots/: 2024-04-17_061429_views_clones_series_fragment.csv  2024-04-17_231244_views_clones_series_fragment.csv  2024-04-18_231209_views_clones_series_fragment.csv  2024-04-19_231334_top_paths_snapshot.csv  (+162 more)
jgphpc/SPH-EXA/latest-report/: report.html  report.md  report_for_pdf.html
main/src/propagator/: factory.hpp
main/src/sphexa/: CMakeLists.txt  sphexa.cpp
scripts/reframe/: sedov_cuda.py
sph/include/sph/: CMakeLists.txt  eos.hpp  sph.hpp
sph/include/sph/hydro_std/: CMakeLists.txt  momentum_energy_gpu.cu
sph/include/sph/hydro_ve/: CMakeLists.txt  momentum_energy_gpu.cu
src/sedov/: CMakeLists.txt  SedovDataGenerator.hpp  sedov.cpp
(+1 files in other folders)
